lab1/Test/L1-A-12-77.output
Error Type A at Line 3
Error Type A at Line 7
Error Type B at Line 11
Error Type A at Line 26
Error Type B at Line 37
Error Type B at Line 39
Error Type B at Line 42
Error Type A at Line 43
Error Type B at Line 49
