lab1/Test/L1-A-12-77.cmm
int L45_ 
;
#struct gh {
}GgIWYoHz1PCBXG64js ( struct {
  struct wVSRm Sb0dk ;
  int _BaDaExYRz ;
  int zTWbZHpN0PNsprnqhdD ~;
  int QrLVdMBgV6r ;
}IvL6kIqjJXaNdA , float U7uJHSOdiNdi0_t_ho ) {
  int JzfHDbacoYlbs67EGDQ [ 366747498 ] = WI5yubxYJORrfwKx3kP 
    || && g9Y4yAg_5wHM5TqCqc0V == WBlav8Y8g / ! - Nbj4kw9FSt3dG 
    [ Bi0GMG3k4 = iXw = HL7xd_OGA0 - KwPJlv8 * Kt6TDejhltbv_L 
    ( kXIEO2J || SmHIkFpLEqcd > ( tIN2SUgT6VEzCOI || R9vMqRnTJe 
    <= OZ * Tl5Rlipr2el ( k0OCMjhQhOBOqmPy , i7HkIzlcYsHafe 
    || KIX_v9LHI >= UGqF8PnBNAV_1Csl - XEs3X0 ( wPaXb4vFoLkBHyLn46_b 
    != tY6JPiPDx ( RwUwti0XQ3dN0sE < K5j8hVIzu4ot4 [ ivGlj_1Cv5MGhc6LExy 
    = zFWdO8kkHWmVVG && LMEaEti1Doy4TQ7iXukY + lJP * 868130474.582099478 
    && ! acUvF3TAk6H0lzQhSF / 30183494 ] ) ) ) ) ) . ao 
    + CULidGtYO ( ) ] , bLfptuywY ;
}
int ;
int ;
int dN ( ) {
  if ( JPUgLOGTzp )   if ( E1n ) {
    return Rs5bIaMdb ;
  }'else   while ( t43irT )   ZAtJCcy8Ja_gukGkjRk_ 
    ;



}
int ;
int ;
int XUJk5n8o ( ) {
  A3XuEpv6n_8y9qAiJ ;
}
int ( ) {
  if ( MFuxKgzFoP96KJr9J )   qs 
else   ypBu7RbArbab9 ;

{
    while gjIuvaS5P ) {
    }~
  }}
int KYYaA , EzTCxnUvO7zrit 

;
int ;
int QVZ6SusStfP8 ( {
  GnSw_qYTo7p ;
  T_ew_HCPCt ;
  kCST7JE ;
  if ( GvjKcFJVtxuMIY9jX6_ )   RYV ;
else   if ( g )   wIlKXs ;


}
